[ФИКС-#2] [ЗАДАЧА-#2] повторное исправление ошибок в классе Human.